--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,10 @@ jobs:
       - name: Run tests with coverage
         run: npm test -- --coverage
         env:
-          VAULTSANDBOX_URL: ${{ secrets.VAULTSANDBOX_URL }}
+          VAULTSANDBOX_URL: ${{ vars.VAULTSANDBOX_URL }}
           VAULTSANDBOX_API_KEY: ${{ secrets.VAULTSANDBOX_API_KEY }}
-          SMTP_HOST: ${{ secrets.SMTP_HOST }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_HOST: ${{ vars.SMTP_HOST }}
+          SMTP_PORT: ${{ vars.SMTP_PORT }}
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
